boutton fin de trajet z-index fix

--- a/css/style.css
+++ b/css/style.css
@@ -337,6 +337,7 @@ body {
 
 .stop {
 	position: absolute;
+    z-index: 1000;
 	top: 25%;
 	left: 1%;
 	width: 4%;
